amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2:
  ADD: OSD text is now configurable, and it displays the album cover.
  FIX: Remote folders are read recursively when dropped on the playlist.
  FIX: Audiocd protocol in filebrowser had empty folders.
  ADD: Cache system for current-track animation in playlist. Reduces
       CPU load when the playlist is visible.
  ADD: 10-band IIR equalizer for GStreamer-engine.
  FIX: The background gradient effect in Context-Browser is now much
       faster. The gradient also looks nicer. (BR 91276)
  FIX: Password-protected streams did not work correctly. (BR 91184).
       Patch by <javapojken@yahoo.se>.
  ADD: NMM-engine was rewritten and updated for the latest NMM release.
       Supports audio and video playback.
  ADD: Cover-Manager supports drag-and-drop.
  ADD: Tags are now read from the Collection database if they are already
       stored. This speeds up adding items to the playlist. (BR 90137)
  ADD: Context-browser shows "Suggested Tracks", utilizing audioscrobbler.
  FIX: Configure does no longer print "Good - Configure has finished" when
       a dependency is missing.
  ADD: Shaded current-track marker in playlist.
  CHG: Internal SQLite upgraded to 3.0.8.

VERSION 1.1.1:
  FIX: Crash when using GStreamer-engine on 64bit. (BR 90869)
  CHG: New splash screen by Nenad Grujicic <mchitman@neobee.net>.
  FIX: Crash when fetching 1 missing cover using the fetch button. (BR 90673)
  REM: Unsupported option "Show Metadata in Playlist".
  ADD: Menubar (optional).
  FIX: GStreamer-engine now resumes playback at correct position.
  ADD: iCandy for Context-Browser: Background gradient and toolbar.
  CHG: Collection-Browser now has a toolbar instead of menubar.
  FIX: With "Title Streaming" disabled GStreamer could not play streams.
  FIX: Osssink is now the default sink for GStreamer. If sink initialization
       fails, a dialog will ask to select another sink.